# almagest

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  EXAMPLES.md  README.md  SETUP.md  pyproject.toml
agents/: coauthor.md  researcher.md  reviewer.md  verifier.md  writer.md
docs/: docs.html  index.html
docs/docs/: index.html  nav.js  reference.html  styles.css  utilities.html  workflows.html
src/almagest/: __init__.py  ads_client.py  agent.py  cli.py  config.py  output.py  tools.py
src/almagest/llm/: __init__.py  base.py  claude.py  local.py
src/almagest/workflows/: __init__.py  audit.py  autoresearch.py  coauthor.py  compare.py  deepresearch.py  draft.py  lit.py  replicate.py  review.py  source.py  watch.py
